2014-07-22  Ben Chaco  <bchaco@x3-c.com>

	* src/e-hal/src/epiphany-hal-api.h:
	* src/e-hal/src/epiphany-hal-data.h:
	* src/e-hal/src/epiphany-shm-manager.c (int e_shm_init):
	* src/e-hal/src/epiphany-shm-manager.h:
	Changes to shared memory table initialization: The shared memory table is now
	initialized during the first call to e_shm_init rather than during the Epiphany
	driver init. The Shared Memory structure definitions are now defined in
	epiphany-hal-data.h rather than in the Epiphany Driver header (epiphany.h).

2014-06-25  Ben Chaco  <bchaco@x3-c.com>

	* src/e-hal/src/epiphany-hal-legacy.c:
	* src/e-hal/src/epiphany-hal.c:
	* src/e-loader/src/e-loader.c:
	* src/e-loader/src/e-process-SREC.c:
	Fixed a segfault due to fprintf being called with an uninitialized file pointer.
	Renamed global diagnostics file pointer from fd to diag_fd.
	Changed explicit fprintf calls to warnx calls.

2014-05-14  Ben Chaco  <bchaco@x3-c.com>

	* src/e-hal/Debug/makefile: Removed file.
	* src/e-hal/Debug/objects.mk: Removed file.
	* src/e-hal/Debug/sources.mk: Removed file.
	* src/e-hal/Release/makefile: Removed file.
	* src/e-hal/Release/objects.mk: Removed file.
	* src/e-hal/Release/sources.mk: Removed file.
	* src/e-hal/src/epiphany-hal-api.h (ssize_t e_write):
	* src/e-hal/src/epiphany-hal.c (int e_init):
	(int e_finalize):
	(ssize_t ee_write_esys):
	(int e_reset_system):
	(int e_reset_chip):

2014-05-09  Mikael Taveniku <mtaveniku@x3-c.com>

	* src/e-hal/src/epiphany-hal-api.h (ssize_t e_write): Fixed function declarations with void params
	* src/e-hal/src/epiphany-hal.c (int e_init): Fixed function declarations with void params
	(int e_finalize):  Fixed function declarations with void params
	(ssize_t ee_write_esys):  Fixed function declarations with void params
	(int e_reset_system):  Fixed function declarations with void params
	(int e_reset_chip):  Fixed function declarations with void params

2014-05-02  Mikael Taveniku <mtaveniku@x3-c.com>
